<resources>
    <!--Account related-->
    <string name="welcome">Welcome to</string>
    <string name="getStarted">Get Started</string>
    <string name="enterYourName">Enter your name</string>
    <string name="hiName">Hi name!</string>
    <string name="name">Name</string>
    <string name="Continue">Continue</string>
    <string name="blankUsernameError">The username must not be blank!</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="logo">Logo Image</string>
    <!--Recipe related-->
    <string name="recipeName">Recipe Name</string>
    <string name="addRecipe">add recipe</string>
    <string name="InsertNewRecipe">Insert a new recipe</string>
    <string name="recipeNameError">Insert the name for the new recipe!</string>
    <string name="recipeNameError2">The recipe name cannot be empty!</string>
    <string name="recipeNameRequest">Insert recipe name</string>
    <string name="selectIngredients">Select the ingredients:</string>
    <string name="quantity" translatable="false">Q.ty</string>
    <string name="recipeDescriptionRequest">Insert here the recipe description:</string>
    <string name="recipeDescription">Recipe description</string>
    <string name="description">Description</string>
    <string name="selectIngredientsError">The recipe cannot have 0 ingredients!</string>
    <!--Ingredients related-->
    <string name="ingredients">Ingredients</string>
    <string name="addWater">add water</string>
    <string name="water">Water</string>
    <string name="qtyWater">q.tyWater</string>
    <string name="malts">Malts</string>
    <string name="qtyMalts">q.tyMalts</string>
    <string name="addMalts">add malts</string>
    <string name="hops">Hops</string>
    <string name="qtyHops">q.tyHops</string>
    <string name="yeasts">Yeasts</string>
    <string name="qtyYeasts">q.tyYeasts</string>
    <string name="addYeasts">add yeasts</string>
    <string name="addHops">add hops</string>
    <string name="sugar">Sugar</string>
    <string name="qtySugar">q.tySugar</string>
    <string name="addSugar">add sugar</string>
    <string name="additives">Additives</string>
    <string name="qtyAdditives">q.tyAdditives</string>
    <string name="addAdditives">add additives</string>
    <string name="ingredientName">Ingredient name</string>
    <!--Equipment related-->
    <string name="equipment">Equipment</string>
    <string name="addEquipment">add equipment</string>
    <string name="equipmentNameRequest">Equipment name</string>
    <string name="category">Category</string>
    <string name="capacity">Capacity</string>
    <string name="newEquipment">New Equipment</string>
    <!--Useful-->
    <string name="appName" translatable="false">BrewDay!</string>
    <string name="home" translatable="false">Home</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="brew" translatable="false">Brew</string>
    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">－</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="line">line</string>
    <string name="unitOfMeasure" translatable="false">L</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="capacityInL" translatable="false">cap. L</string>
    <string name="recipe">Recipe</string>
    <string name="date">Date</string>
    <string name="recipeInstances">Recipe instances</string>
    <string name="addRecipeInstance">Add a recipe instance</string>
    <string name="recipeInstancesTextView">Recipe Instance:</string>
    <string name="howManyLiters">How many liters do you want to brew?</string>
    <string name="insertLiter">Insert liters</string>
    <string name="instanceNote">Insert the notes you have on this instance</string>
    <string name="note">Insert your notes here.</string>
    <string name="litersError">Insert a valid quantity.</string>
    <string name="overMaxCapacityError">The quantity specified is greater than the total equipment capacity!</string>
    <string name="descriptionInstance">Descrizione istanza molto lunga</string>
</resources>
