<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart"/>
    <item
        android:id="@+id/brew"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_lightbulb_24"
        android:title="@string/brew"/>
    <item
        android:id="@+id/recipes"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_science_24"
        android:title="@string/recipes"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>